Adding unit test framework

--- a/WPNest/WPNest/App.xaml
+++ b/WPNest/WPNest/App.xaml
@@ -12,8 +12,8 @@
     <Application.ApplicationLifetimeObjects>
         <!--Required object that handles lifetime events for the application-->
         <shell:PhoneApplicationService 
-            Launching="Application_Launching" Closing="Application_Closing" 
-            Activated="Application_Activated" Deactivated="Application_Deactivated"/>
+            Launching="OnApplicationLaunching" Closing="OnApplicationClosing" 
+            Activated="OnApplicationActivated" Deactivated="OnApplicationDeactivated"/>
     </Application.ApplicationLifetimeObjects>
 
 </Application>
