--- a/WPNest/WPNest/MainPage.xaml
+++ b/WPNest/WPNest/MainPage.xaml
@@ -19,25 +19,75 @@
 
 	<phone:PhoneApplicationPage.Resources>
 		<WPNest:TrueToVisibleConverter x:Key="TrueToVisibleConverter"/>
+		<LinearGradientBrush x:Key="ChevronBrush" EndPoint="-0.124,0.704" StartPoint="1,0.413">
+			<GradientStop Color="#FFC7C7C7" Offset="0"/>
+			<GradientStop Color="#FFDEDEDE" Offset="0.95"/>
+			<GradientStop Color="#FFB0A8A8" Offset="0.092"/>
+		</LinearGradientBrush>
+		<Style x:Key="BlankButton" TargetType="Button">
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
+			<Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
+			<Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
+			<Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
+			<Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
+			<Setter Property="Padding" Value="10,3,10,5"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="Button">
+						<ContentControl x:Name="ContentContainer" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Padding="{TemplateBinding Padding}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Background="#01010101">
+							<VisualStateManager.VisualStateGroups>
+								<VisualStateGroup x:Name="CommonStates">
+									<VisualState x:Name="Normal"/>
+									<VisualState x:Name="Disabled"/>
+									<VisualState x:Name="MouseOver"/>
+								</VisualStateGroup>
+								<VisualStateGroup x:Name="FocusStates">
+									<VisualState x:Name="Focused"/>
+								</VisualStateGroup>
+							</VisualStateManager.VisualStateGroups>
+						</ContentControl>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
 	</phone:PhoneApplicationPage.Resources>
 
-	<Grid x:Name="LayoutRoot" Background="Transparent">
+	<Grid x:Name="LayoutRoot" Background="{StaticResource BackgroundBrush}" Margin="1,0,-1,0">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 
-		<Grid x:Name="ContentPanel" Grid.Row="0">
+		<Grid Margin="50,0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380">
 			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="Auto" />
+				<RowDefinition/>
+				<RowDefinition Height="0.3*"/>
+				<RowDefinition/>
 			</Grid.RowDefinitions>
-			<Button x:Name="upButton" Click="OnUpClick" IsEnabled="{Binding IsLoggedIn}" Height="100" Width="140" Grid.Row="0" HorizontalAlignment="Center">Up</Button>
-			<TextBlock Text="{Binding CurrentTemperature}" FontSize="60" HorizontalAlignment="Center" Grid.Row="1"/>
-			<Button x:Name="downButton" Click="OnDownClick" IsEnabled="{Binding IsLoggedIn}" Height="100" Width="140" Grid.Row="2" HorizontalAlignment="Center">Down</Button>
+			<Ellipse Height="380" VerticalAlignment="Center" Margin="0" Grid.RowSpan="3" Width="380" HorizontalAlignment="Center">
+				<Ellipse.Fill>
+					<RadialGradientBrush>
+						<GradientStop Color="Black" Offset="0"/>
+						<GradientStop Color="#FF0E0E0E" Offset="0.822"/>
+						<GradientStop Color="Black" Offset="0.989"/>
+						<GradientStop Color="#FF0E0E0E" Offset="0.523"/>
+					</RadialGradientBrush>
+				</Ellipse.Fill>
+			</Ellipse>
+			<TextBlock Text="{Binding CurrentTemperature}" FontSize="133.333" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Segoe WP Semibold" Grid.RowSpan="3" Margin="0,-30,0,0" Foreground="#FFBFBFBF"/>
+			<Button x:Name="upButton" Click="OnUpClick" IsEnabled="{Binding IsLoggedIn}" Grid.Row="0" BorderThickness="0" Padding="0" Style="{StaticResource BlankButton}" Background="#01010101">
+				<Path Data="M131.667,73.3333 L132,57.0003 L182.332,32.667 L232.998,57.0002 L232.665,73.3336 L181.999,51.3336 z" HorizontalAlignment="Left" Height="40.666" Stretch="Fill" UseLayoutRounding="False" VerticalAlignment="Top" Width="101.333" Fill="{StaticResource ChevronBrush}" Margin="0,0,0,52"/>
+			</Button>
+			<Button x:Name="downButton" Click="OnDownClick" IsEnabled="{Binding IsLoggedIn}" BorderThickness="0" Padding="0" Grid.Row="2" Style="{StaticResource BlankButton}" Background="#01010101">
+				<Path Data="M131.667,73.3333 L132,57.0003 L182.332,32.667 L232.998,57.0002 L232.665,73.3336 L181.999,51.3336 z" HorizontalAlignment="Left" Height="40.666" Stretch="Fill" UseLayoutRounding="False" VerticalAlignment="Top" Width="101.333" RenderTransformOrigin="0.5,0.5" Margin="0,50,0,0" Fill="{StaticResource ChevronBrush}">
+					<Path.RenderTransform>
+						<CompositeTransform Rotation="180"/>
+					</Path.RenderTransform>
+				</Path>
+			</Button>
 		</Grid>
 
-		<Login:LoginControl x:Name="loginControl" Visibility="{Binding Path=IsLoggingIn, Converter={StaticResource TrueToVisibleConverter}}"/>
+		<Login:LoginControl x:Name="loginControl" Visibility="{Binding IsLoggingIn, Converter={StaticResource TrueToVisibleConverter}}"/>
 	</Grid>
 
 </phone:PhoneApplicationPage>
