--- a/WPNest/WPNest/Login/LoginControl.xaml
+++ b/WPNest/WPNest/Login/LoginControl.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="WPNest.Login.LoginControl" 
+﻿<UserControl 
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-			 xmlns:WPNest="clr-namespace:WPNest" mc:Ignorable="d" 
+			 xmlns:WPNest="clr-namespace:WPNest" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" x:Class="WPNest.Login.LoginControl" 
+			 mc:Ignorable="d" 
 			 FontFamily="{StaticResource PhoneFontFamilyNormal}" 
 			 FontSize="{StaticResource PhoneFontSizeNormal}" 
 			 Foreground="{StaticResource PhoneForegroundBrush}" 
@@ -13,15 +14,23 @@
 		<WPNest:MainPageViewModel />
 	</d:DataContext>
 
-	<Grid x:Name="ContentPanel" Margin="12,0,12,0" Background="{StaticResource BackgroundBrush}">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<TextBox x:Name="username" Grid.Row="0" Text="{Binding Path=UserName, Mode=TwoWay}" />
-		<PasswordBox x:Name="password" Grid.Row="1" Password="{Binding Path=Password, Mode=TwoWay}" />
-		<Button Click="OnLoginPressed" Grid.Row="2" Foreground="#FF171717" BorderBrush="#FF212121">Login</Button>
+	<Grid Background="{StaticResource BackgroundBrush}">
+
+		<Grid x:Name="ContentPanel" Margin="12,50,12,0">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto"/>
+				<RowDefinition/>
+			</Grid.RowDefinitions>
+			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Log in to your Nest account" VerticalAlignment="Top" Foreground="#FF3E3E3E" Margin="12,0,0,12" FontSize="29.333"/>
+			<toolkit:PhoneTextBox x:Name="username" Grid.Row="1" Text="{Binding UserName, Mode=TwoWay}" Hint="Email address" InputScope="EmailUserName" />
+			<PasswordBox x:Name="password" Grid.Row="2" Password="{Binding Password, Mode=TwoWay}" GotFocus="OnPasswordChangedFocus" LostFocus="OnPasswordChangedFocus" />
+			<TextBlock x:Name="passwordHint" TextWrapping="Wrap" Text="Password" IsHitTestVisible="False" Grid.Row="2" Padding="17,0,0,0" VerticalAlignment="Center" FontSize="24" Foreground="#FF919191" Margin="0,20"/>
+			<Button Click="OnLoginPressed" Grid.Row="3" Foreground="#FF474747" BorderBrush="#FF515151" Content="Log In" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" Background="#4CF6FBFF"/>
+		</Grid>
+
 	</Grid>
 
 </UserControl>
