--- a/WPNest/WPNest/ThermostatControl.xaml
+++ b/WPNest/WPNest/ThermostatControl.xaml
@@ -103,18 +103,15 @@
     			<VisualState x:Name="Default"/>
     			<VisualState x:Name="Heating">
     				<Storyboard>
-    					<ColorAnimation Duration="0" To="#FFF51010" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[3].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FFFD4914" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[1].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FFFF6F0C" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[2].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FFFD1414" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[0].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
+    					<ColorAnimation Duration="0" To="#FFFF2301" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[1].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
+    					<ColorAnimation Duration="0" To="#FFFE9B4A" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[0].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
+    					<DoubleAnimation Duration="0" To="0.776" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[1].(GradientStop.Offset)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
     				</Storyboard>
     			</VisualState>
     			<VisualState x:Name="Cooling">
     				<Storyboard>
-    					<ColorAnimation Duration="0" To="#FF3B27FF" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[0].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FF3622FF" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[3].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FF5048FF" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[1].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
-    					<ColorAnimation Duration="0" To="#FF6151FB" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[2].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
+    					<ColorAnimation Duration="0" To="#FF0353E5" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[1].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
+    					<ColorAnimation Duration="0" To="#FF5CB1F6" Storyboard.TargetProperty="(Shape.Fill).(GradientBrush.GradientStops)[0].(GradientStop.Color)" Storyboard.TargetName="orb" d:IsOptimized="True"/>
     				</Storyboard>
     			</VisualState>
     		</VisualStateGroup>
@@ -127,12 +124,10 @@
     		</Grid.RowDefinitions>
     		<Ellipse x:Name="orb" Height="380" VerticalAlignment="Center" Margin="0" Grid.RowSpan="3" Width="380" HorizontalAlignment="Center">
     			<Ellipse.Fill>
-    				<RadialGradientBrush>
-    					<GradientStop Color="Black" Offset="0"/>
-    					<GradientStop Color="#FF212020" Offset="0.822"/>
-    					<GradientStop Color="#FF0F0F0F" Offset="0.989"/>
-    					<GradientStop Color="#FF1D1D1D" Offset="0.523"/>
-    				</RadialGradientBrush>
+    				<LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+    					<GradientStop Color="#FF515253" Offset="0"/>
+    					<GradientStop Color="#FF262B2F" Offset="0.686"/>
+    				</LinearGradientBrush>
     			</Ellipse.Fill>
     		</Ellipse>
     		<Path x:Name="ticks" Data="M0,0" UseLayoutRounding="False" Grid.RowSpan="3" Stroke="White" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380"/>
