--- a/WPNest/WPNest/Login/LoginControl.xaml
+++ b/WPNest/WPNest/Login/LoginControl.xaml
@@ -8,15 +8,21 @@
 			 FontFamily="{StaticResource PhoneFontFamilyNormal}" 
 			 FontSize="{StaticResource PhoneFontSizeNormal}" 
 			 Foreground="{StaticResource PhoneForegroundBrush}" 
-			 d:DesignHeight="480" d:DesignWidth="480">
+			 d:DesignHeight="800" d:DesignWidth="480">
 
 	<d:DataContext>
 		<WPNest:NestViewModel />
 	</d:DataContext>
 
 	<Grid Background="{StaticResource BackgroundBrush}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
 
-		<Grid x:Name="ContentPanel" Margin="12,50,12,0">
+		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="wpnest" VerticalAlignment="Top" FontFamily="Segoe WP Light" FontSize="48" Foreground="{StaticResource logoBrush}" Margin="25,10,0,0"/>
+
+		<Grid x:Name="ContentPanel" Margin="12,60,12,0" Grid.Row="1">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
@@ -24,11 +30,11 @@
 				<RowDefinition Height="Auto"/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
-			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Log in to your Nest account" VerticalAlignment="Top" Foreground="#FF3E3E3E" Margin="12,0,0,12" FontSize="29.333"/>
+			<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Log in to your Nest account" VerticalAlignment="Top" Foreground="{StaticResource logoBrush}" Margin="12,0,0,8" FontSize="24"/>
 			<toolkit:PhoneTextBox x:Name="username" Grid.Row="1" Text="{Binding UserName, Mode=TwoWay}" Hint="Email address" InputScope="EmailUserName" />
 			<PasswordBox x:Name="password" Grid.Row="2" Password="{Binding Password, Mode=TwoWay}" GotFocus="OnPasswordChangedFocus" LostFocus="OnPasswordChangedFocus" />
 			<TextBlock x:Name="passwordHint" TextWrapping="Wrap" Text="Password" IsHitTestVisible="False" Grid.Row="2" Padding="17,0,0,0" VerticalAlignment="Center" FontSize="24" Foreground="#FF919191" Margin="0,20"/>
-			<Button Click="OnLoginPressed" Grid.Row="3" Foreground="#FF474747" BorderBrush="#FF515151" Content="Log In" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" Background="#4CF6FBFF"/>
+			<Button Click="OnLoginPressed" Grid.Row="3" Foreground="#FF474747" BorderBrush="#FF515151" Content="Log In" Margin="0,30,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" Background="#4CF6FBFF"/>
 		</Grid>
 
 	</Grid>
