--- a/WPNest/WPNest/MainPage.xaml
+++ b/WPNest/WPNest/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage x:Class="WPNest.MainPage" 
+﻿<phone:PhoneApplicationPage 
 							xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
 							xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
 							xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone" 
@@ -6,12 +6,24 @@
 							xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 							xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 							xmlns:WPNest="clr-namespace:WPNest" xmlns:Login="clr-namespace:WPNest.Login" 
+							xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" x:Class="WPNest.MainPage" 
 							mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768" 
-							FontFamily="{StaticResource PhoneFontFamilyNormal}" 
-							FontSize="{StaticResource PhoneFontSizeNormal}" 
-							Foreground="{StaticResource PhoneForegroundBrush}" 
 							SupportedOrientations="Portrait" Orientation="Portrait" 
 							shell:SystemTray.IsVisible="True">
+
+	<phone:PhoneApplicationPage.Resources>
+		<WPNest:TrueToVisibleConverter x:Key="TrueToVisibleConverter"/>
+	</phone:PhoneApplicationPage.Resources>
+
+	<phone:PhoneApplicationPage.FontFamily>
+		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
+	</phone:PhoneApplicationPage.FontFamily>
+	<phone:PhoneApplicationPage.FontSize>
+		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
+	</phone:PhoneApplicationPage.FontSize>
+	<phone:PhoneApplicationPage.Foreground>
+		<StaticResource ResourceKey="PhoneForegroundBrush"/>
+	</phone:PhoneApplicationPage.Foreground>
 
 	<d:DataContext>
 		<WPNest:NestSampleViewModel />
@@ -21,16 +33,17 @@
 		<WPNest:NestViewModel />
 	</phone:PhoneApplicationPage.DataContext>
 
-	<phone:PhoneApplicationPage.Resources>
-		<WPNest:TrueToVisibleConverter x:Key="TrueToVisibleConverter"/>
-	</phone:PhoneApplicationPage.Resources>
-
 	<Grid x:Name="LayoutRoot" Background="{StaticResource BackgroundBrush}" Margin="0">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 
-		<WPNest:ThermostatControl Margin="50,194" Visibility="{Binding IsLoggedIn, Converter={StaticResource TrueToVisibleConverter}}"/>
+		<StackPanel x:Name="loadingPanel" VerticalAlignment="Center">
+			<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="wpnest" VerticalAlignment="Center" FontSize="48" FontFamily="Segoe WP SemiLight" Foreground="{StaticResource logoBrush}" Margin="0"/>
+			<toolkit:PerformanceProgressBar IsIndeterminate="True"/>
+		</StackPanel>
+
+		<WPNest:ThermostatControl Margin="50,194" Visibility="{Binding IsLoggedIn, Converter={StaticResource TrueToVisibleConverter}}" d:IsHidden="True"/>
 
 		<Login:LoginControl x:Name="loginControl" Visibility="{Binding IsLoggingIn, Converter={StaticResource TrueToVisibleConverter}}"/>
 	</Grid>
