--- a/WPNest/WPNest/App.xaml
+++ b/WPNest/WPNest/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application 
-    x:Class="WPNest.App"
+﻿<Application
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" 
+    x:Class="WPNest.App"
+    >
 
     <Application.Resources>
     	<LinearGradientBrush x:Key="BackgroundBrush" EndPoint="0.5,1" StartPoint="0.5,0">
@@ -12,6 +13,76 @@
     		<GradientStop Color="#FFBBBEC1" Offset="0.761"/>
     	</LinearGradientBrush>
     	<SolidColorBrush x:Key="logoBrush" Color="#FF535353"/>
+    	<Style x:Key="ToggleSwitchTemplate" TargetType="toolkitPrimitives:ToggleSwitchButton">
+    		<Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
+    		<Setter Property="IsTabStop" Value="False"/>
+    		<Setter Property="SwitchForeground" Value="{StaticResource PhoneAccentBrush}"/>
+    		<Setter Property="Template">
+    			<Setter.Value>
+    				<ControlTemplate TargetType="toolkitPrimitives:ToggleSwitchButton">
+    					<Border x:Name="Root" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CacheMode="BitmapCache" Opacity="{TemplateBinding Opacity}" Padding="{TemplateBinding Padding}">
+    						<VisualStateManager.VisualStateGroups>
+    							<VisualStateGroup x:Name="CommonStates">
+    								<VisualState x:Name="Normal"/>
+    								<VisualState x:Name="Disabled">
+    									<Storyboard>
+    										<DoubleAnimation Duration="0" To="0.3" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Root"/>
+    									</Storyboard>
+    								</VisualState>
+    							</VisualStateGroup>
+    							<VisualStateGroup x:Name="CheckStates">
+    								<VisualStateGroup.Transitions>
+    									<VisualTransition GeneratedDuration="0:0:0.05" To="Unchecked"/>
+    									<VisualTransition GeneratedDuration="0:0:0.05" To="Checked"/>
+    								</VisualStateGroup.Transitions>
+    								<VisualState x:Name="Checked">
+    									<Storyboard>
+    										<DoubleAnimation Duration="0" To="69" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="BackgroundTranslation">
+    											<DoubleAnimation.EasingFunction>
+    												<ExponentialEase EasingMode="EaseOut" Exponent="15"/>
+    											</DoubleAnimation.EasingFunction>
+    										</DoubleAnimation>
+    										<DoubleAnimation Duration="0" To="69" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="ThumbTranslation">
+    											<DoubleAnimation.EasingFunction>
+    												<ExponentialEase EasingMode="EaseOut" Exponent="15"/>
+    											</DoubleAnimation.EasingFunction>
+    										</DoubleAnimation>
+    									</Storyboard>
+    								</VisualState>
+    								<VisualState x:Name="Dragging"/>
+    								<VisualState x:Name="Unchecked">
+    									<Storyboard>
+    										<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="BackgroundTranslation"/>
+    										<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(TranslateTransform.X)" Storyboard.TargetName="ThumbTranslation"/>
+    									</Storyboard>
+    								</VisualState>
+    							</VisualStateGroup>
+    						</VisualStateManager.VisualStateGroups>
+    						<Grid x:Name="SwitchRoot" Background="Transparent" Height="95" Width="136">
+    							<Grid x:Name="SwitchTrack" Width="89">
+    								<Grid x:Name="SwitchBottom" Background="{TemplateBinding SwitchForeground}" Height="34">
+    									<Rectangle x:Name="SwitchBackground" Fill="{TemplateBinding Background}" HorizontalAlignment="Center" Height="20" VerticalAlignment="Center" Width="77">
+    										<Rectangle.RenderTransform>
+    											<TranslateTransform x:Name="BackgroundTranslation"/>
+    										</Rectangle.RenderTransform>
+    									</Rectangle>
+    									<Border BorderThickness="3" BorderBrush="{TemplateBinding Background}">
+    										<Border BorderThickness="4" BorderBrush="{TemplateBinding Foreground}"/>
+    									</Border>
+    								</Grid>
+    								<Border x:Name="SwitchThumb" BorderThickness="4,0" HorizontalAlignment="Left" Height="38" Margin="-4,0" Width="28" BorderBrush="{TemplateBinding Foreground}">
+    									<Border.RenderTransform>
+    										<TranslateTransform x:Name="ThumbTranslation"/>
+    									</Border.RenderTransform>
+    									<Border x:Name="ThumbCenter" BorderThickness="2" BorderBrush="{TemplateBinding Background}" Background="{TemplateBinding Background}"/>
+    								</Border>
+    							</Grid>
+    						</Grid>
+    					</Border>
+    				</ControlTemplate>
+    			</Setter.Value>
+    		</Setter>
+    	</Style>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
